--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <body>
     <h1>Welcome to Speedstarmotors</h1>
     <h2>Driving Dreams, Delivering Speed</h2>
-    <p>At Speedstarmotors we believe in providing top quality vehicles and exceptional customer service. Whether you are looking for a high performance sports car or a rugged SUV we got you covered.</p>
+    <p>At Speedstarmotors we believe in providing top quality vehicles and exceptional customer service. Whether you are looking for a high performance sports car or a rugged SUV we got you covered. Your journey starts here!</p>
+    <h3>Featured Cars</h3>
+    <p>SUVs
+    Ford Explore 2025 $38,000 BLACK</p>
   </body>
 </html>
