--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h3>Featured Cars</h3>
     <p>SUVs
     Ford Explore 2025 $38,000 BLACK</p>
+    <p> Jeep Grand Cherokee 2025 $ 42,000 SILVER</p>
   </body>
 </html>
