--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <p>SUVs
     Ford Explore 2025 $38,000 BLACK</p>
     <p> Jeep Grand Cherokee 2025 $ 42,000 SILVER</p>
+    <p> Ford Escape 2025 $30,000 WHITE</p>
   </body>
 </html>
